# KataBankOCR

./: CMakeLists.txt  README.md
Resources/: 000000001.txt  largeFile.txt
Source/: katabankocr.cpp  katabankocr.h
Test/: katabankocrtest.cpp
