project(KataBankOCR)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)
set(SOURCE_PATH ${CMAKE_SOURCE_DIR}/Source)
set(TEST_PATH ${CMAKE_SOURCE_DIR}/Test)
set(GTEST_PATH C:/gtest-1.6.0)
set(GTEST_BUILD_PATH C:/gtest-1.6.0-build)
set(GTEST_INCLUDE_DIR ${GTEST_PATH}/include)
set(GTEST_LIBRARY ${GTEST_BUILD_PATH}/gtest.lib)
set(GTEST_MAIN_LIBRARY ${GTEST_BUILD_PATH}/gtest_main.lib)
add_library(${PROJECT_NAME} Source/KataBankOCR.cpp)
enable_testing()
link_directories(${GTEST_PATH} ${SOURCE_PATH})
find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIR} ${SOURCE_PATH})
#add_executable(${PROJECT_NAME} ${SOURCE_PATH}/KataBankOCR.cpp)
add_executable(${PROJECT_NAME}Test ${TEST_PATH}/KataBankOCRTest.cpp)
target_link_libraries(${PROJECT_NAME}Test ${PROJECT_NAME} ${GTEST_MAIN_LIBRARY} ${GTEST_LIBRARY})
